# embedded-fat

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.gradle.kts  settings.gradle.kts
benches/: ucs2_character_case_folding.rs  utils_read_le.rs
disks/: fat12.img  fat16.img
src/: allocation_table.rs  bios_parameter_block.rs  boot_sector.rs  device.rs  directory.rs  directory_entry.rs  directory_item.rs  encoding.rs  file.rs  file_name.rs  file_system.rs  lib.rs  mock.rs  utils.rs
src/allocation_table/: entry.rs  entry_cluster_number.rs  entry_offset.rs  error.rs  kind.rs  physical_entry.rs
src/bios_parameter_block/: error.rs
src/boot_sector/: bios_parameter_block.rs
src/boot_sector/bios_parameter_block/: error.rs
src/device/: mock.rs  single_access.rs
src/device/single_access/: error.rs
src/directory/: file.rs  table.rs
src/directory_entry/: attributes.rs  error.rs  free.rs  iterator.rs  long_name.rs  short_name.rs
src/directory_entry/iterator/: error.rs  file.rs  table.rs
src/directory_item/: builder.rs  error.rs  iteration_error.rs  iterator.rs
src/encoding/: ascii_only_encoder.rs  code_page_encoder.rs  error.rs  ucs2_character.rs
src/file/: error.rs
src/file_name/: long.rs  short.rs
src/file_name/short/: error.rs  (+1 more)
src/file_system/: builder.rs  error.rs
src/mock/: core_error.rs  data_stream.rs  erroring_device.rs  erroring_stream.rs  io_error.rs  scripted_code_page_encoder.rs  scripted_directory_entry_iterator.rs  void_stream.rs
tests/: end_to_end.rs
tests/common/: mod.rs  std_file.rs
ucs2_casing_codegen/: Cargo.toml  build.gradle.kts
ucs2_casing_codegen/src/: case_folding.rs  main.rs
(+3 files in other folders)
