[package]
name = "embedded-fat"
version = "0.1.0"
edition = "2024"

[features]
default = ["async"]
async = ["embedded-io-async"]
std = ["embedded-io/std", "embedded-io-async/std"]

[dependencies]
bitflags = "2"
embedded-io = "0.7"
embedded-io-async = { version = "0.7", optional = true }
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt"] }
